# graphics-cw

./: .clang-tidy  .gitignore  CMP-5010B_Mark_Sheet_2024.docx  CMakeLists.txt  CW  Camera.h  Mesh.cpp  Mesh.h  README.md  TODO.txt  Texture.cpp  Texture.h  Vertex.h  example.cpp  main.cpp  ~$P-5010B_Mark_Sheet_2024.docx
.cache/clangd/index/: App.cpp.7234226AE7DAAA72.idx  App.cpp.79F3050FCB03CF5E.idx  App.cpp.F0F06BDF84235897.idx  App.h.1E70F2531770AB84.idx  App.h.A3EDDAF3FE33C208.idx  App.h.DC35181D1F53CD7F.idx  AssimpGLMHelpers.cpp.77066FA01C7FB92D.idx  AssimpGLMHelpers.cpp.89D38538C6D72962.idx  AssimpGLMHelpers.cpp.EC52BDDB00C499EC.idx  AssimpGLMHelpers.h.A1A3755B3EDBBF6C.idx  AssimpGLMHelpers.h.FD66600C13A366A2.idx  AssimpGLMHelpers.h.FFC4D36DC7E6CBA1.idx  BoundingBox.cpp.849C489C8171F5B0.idx  BoundingBox.cpp.A57F97DBB2A0E378.idx  BoundingBox.cpp.A765F76EA2C0DF2E.idx  BoundingBox.h.2B0B01FDA928A9EA.idx  BoundingBox.h.3C496310E5C07894.idx  BoundingBox.h.F4B3B5CC5CAB4031.idx  Buffer.cpp.41376CF651BF752C.idx  Buffer.cpp.CFA13039E377E825.idx  Buffer.h.F027E181FAC32E2F.idx  Buffer.h.F9D6D313A3446A7D.idx  Camera.cpp.2099757446784212.idx  Camera.cpp.EDC33ABC64468E24.idx  Camera.h.391509DBE0A9558C.idx  Camera.h.87E07737DF2A8EF9.idx  Camera.h.F62AA528BFDE824D.idx  CameraHolder.h.1E091EB6CB98F95B.idx  CameraHolder.h.F761A2F00109DA75.idx  Collisions.cpp.3114F6C8F29F378A.idx  Collisions.cpp.94D8C124C9A03E34.idx  Collisions.h.13C918744482EC7E.idx  Collisions.h.BF71C9692679E54F.idx  Color.cpp.4F138A8F95FCD087.idx  Color.cpp.BA8C8010EAC1AF19.idx  Color.h.277834A4AF19F471.idx  Color.h.5646EF46F3A91EDA.idx  Color.h.A06DBEE94A5DA0BD.idx  Config.h.29FCB58ABA3DA8A3.idx  Config.h.5DA29444669D9E93.idx  (+135 more)
Assets/: backpack.vert  basic.frag  basic.vert
Assets/objects/barrier/: Concrete-Barrier_04.mtl
Assets/objects/bumpercar1/: bumper-car.mtl
Assets/objects/bumpercar2/: bumper-car.mtl
Assets/objects/enterance/: enterance.mtl
Assets/objects/ferris/: ferris-cart.mtl  ferris-moving.mtl  ferris-static.mtl
Assets/objects/lights/: bulb.mtl
Assets/objects/moon/: Moon.mtl
Assets/objects/person-sitting/: bodyless.mtl  person-headless.mtl
Assets/objects/rollercoaster/: coaster.mtl
Assets/objects/spotlight/: spotlight.mtl
Assets/objects/tree/: tree.mtl
Assets/shaders/: Moon.frag  Moon.vert  Sky.frag  Sky.vert  backpack.frag  backpack.geom  backpack.vert  base.frag  base.geom  base.tesc  base.tese  base.vert  basic.frag  basic.geom  basic.vert  boundingbox.frag  boundingbox.vert  camera.glsl  cloud.frag  cloud.vert  grass.frag  grass.geom  grass.vert  infinitePlane.frag  infinitePlane.vert  lighting.frag  lights.glsl  materialed.frag  materialed.vert  matrices.glsl  noise.frag  particle.frag  particle.geom  particle.vert  postProcessing.frag  postProcessing.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  (+11 more)
Engine/: App.cpp  App.h  Config.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  ImmovableObject.cpp  ImmovableObject.h  View.cpp  View.h
Engine/graphics/: Color.cpp  Color.h  DepthBuffer.cpp  DepthBuffer.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Particle.cpp  Particle.h  PostProcessor.cpp  PostProcessor.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  ShadowBuffer.cpp  ShadowBuffer.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  stb_image.h
Engine/graphics/buffers/: Buffer.cpp  Buffer.h  DepthBuffer.cpp  DepthBuffer.h  FrameBuffer.cpp  FrameBuffer.h  ShadowBuffer.cpp  ShadowBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Engine/helpers/: AssimpGLMHelpers.cpp  AssimpGLMHelpers.h  Perlin.h
Engine/include/: View.cpp  View.h
Engine/include/utils/: Buffer.cpp
Engine/physics/: Collisions.cpp  Collisions.h  Constants.h  Gravity.cpp  Gravity.h  ModelAttributes.cpp  ModelAttributes.h  Spline.cpp  Spline.h
Engine/renderables/: Entity.cpp  Entity.h  ImmovableObject.cpp  ImmovableObject.h  Particle.cpp  Particle.h  Renderable.cpp  Renderable.h
Engine/renderables/objects/: Barriers.cpp  Barriers.h  BumperCar.cpp  BumperCar.h  Clouds.cpp  Clouds.h  FerrisWheel.cpp  FerrisWheel.h  InfinitePlane.h  Lights.cpp  Lights.h  Player.cpp  Player.h  ProceduralTerrain.cpp  ProceduralTerrain.h  RollerCoaster.cpp  RollerCoaster.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Spotlight.cpp  Spotlight.h  Sun.cpp  Sun.h  Trees.cpp  Trees.h  Walls.cpp  Walls.h
Engine/renderables/shapes/: Plane.cpp  Plane.h
Engine/shapes/: Plane.h
Engine/utils/: BoundingBox.cpp  BoundingBox.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraHolder.h  Lights.h  Noise.cpp  Noise.h  PlayerHolder.cpp  PlayerHolder.h  PlayerManager.cpp  PlayerManager.h  Random.cpp  Random.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Singleton.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h
Engine/utils/Objects/: BumperCar.cpp  BumperCar.h  InfinitePlane.cpp  InfinitePlane.h  Player.cpp  Player.h  ProceduralTerrain.cpp  ProceduralTerrain.h  Skybox.cpp  Skybox.h  Sun.cpp  Sun.h
GLSLFiles/: basic.frag
Game/: Camera.cpp  Camera.h
Graphics/: InfinitePlane.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Perlin.cpp  Perlin.h  ProceduralTerrain.cpp  ProceduralTerrain.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Sun.cpp  Sun.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Vertex.h
Utils/: AssimpGLMHelpers.cpp  AssimpGLMHelpers.h
shaders/: Shader.cpp  Shader.h
